labs-2/ing-video.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /video
        backend: 
          serviceName: video-service
          servicePort: 8080
      - path: /wear
        backend: 
          serviceName: apparels-service
          servicePort: 8080
